// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCodeBlock should render correctly 1`] = `
<DocumentFragment>
  <pre
    class="bpk-code__pre"
  >
    <code
      class="bpk-code bpk-code--block"
    >
      npm install react --save-dev
    </code>
  </pre>
</DocumentFragment>
`;

exports[`BpkCodeBlock should render correctly with "alternate" 1`] = `
<DocumentFragment>
  <pre
    class="bpk-code__pre bpk-code__pre--alternate"
  >
    <code
      class="bpk-code bpk-code--block"
    >
      npm install react --save-dev
    </code>
  </pre>
</DocumentFragment>
`;

exports[`BpkCodeBlock should render correctly with custom "className" 1`] = `
<DocumentFragment>
  <pre
    class="bpk-code__pre my-custom-class"
  >
    <code
      class="bpk-code bpk-code--block"
    >
      npm install react --save-dev
    </code>
  </pre>
</DocumentFragment>
`;
